=== HEAD

* Skip eager loading queries if there are no matching keys (jeremyevans) (#952)

* Dataset#paged_each now returns an enumerator if not passed a block (jeremyevans)

* Use to_json :root option with string value as the JSON object key in the json_serializer plugin (jeremyevans)

* Allow create_enum in the pg_enum extension be reversible in migrations (celsworth) (#951)

* Have swift adapter respect database and application timezone settings (asppsa, jeremyevans) (#946)

* Don't have the static cache plugin attempt to validate objects (jeremyevans)

* Make freeze not validate objects if their errors are already frozen (jeremyevans)

* Only use prepared statements for associations if caching association metadata (jeremyevans)

* Set parent association when loading descendants in the rcte_tree plugin (jeremyevans)

* Add Database#transaction :before_retry option, specifying a proc to call before retrying (uhoh-itsmaciek) (#941)

=== 4.19.0 (2015-02-01)

* Make jdbc/sqlanywhere correctly set :auto_increment entry in schema hashes (jeremyevans)

* Add Model#cancel_action for canceling actions in before hooks, instead of having the hooks return false (jeremyevans)

* Support not setting @@wait_timeout on MySQL via :timeout=>nil Database option (jeremyevans)

* Add accessed_columns plugin, recording which columns have been accessed for a model instance (jeremyevans)

* Use correct migration version when using IntegerMigrator with :allow_missing_migration_files (blerins) (#938)

* Make Dataset#union, #intersect, and #except automatically handle datasets with raw SQL (jeremyevans) (#934)

* Add column_conflicts plugin to automatically handle columns that conflict with method names (jeremyevans) (#929)

* Add Model#get_column_value and #set_column_value to get/set column values (jeremyevans) (#929)

=== 4.18.0 (2015-01-02)

* Make Dataset#empty? work when the dataset is ordered by a non-column expression (pete) (#923)
